Update C2Client.java